<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    tools:context="br.com.sabbetecnologia.reclameaqui.MainActivity">

    <EditText
        android:id="@+id/edtMAlogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/edit_txt_login"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toTopOf="@+id/edtMAsenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView4" />

    <EditText
        android:id="@+id/edtMAsenha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_txt_login"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnMAcancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMAlogin" />

    <Button
        android:id="@+id/btnMAcancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_basico"
        android:text="@string/limpar"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtMACadastrar"
        app:layout_constraintEnd_toStartOf="@+id/btnMAenviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMAsenha" />

    <Button
        android:id="@+id/btnMAenviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_basico"
        android:text="@string/enviar"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnMAcancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMAcancelar"
        app:layout_constraintTop_toTopOf="@+id/btnMAcancelar" />

    <TextView
        android:id="@+id/txtMACadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_txt_login"
        android:padding="4dp"
        android:text="@string/cadastrar"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMAcancelar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_menus"
        android:elevation="8dp"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:text="@string/reclame_aqui"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/textPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edtMAlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
